--- a/03-NODE-BASICS/package.json
+++ b/03-NODE-BASICS/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/erlinis/node_from_scratch#readme",
   "dependencies": {
+    "colors": "^1.3.2",
     "yargs": "^12.0.2"
   },
   "devDependencies": {}
